--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tempatbelanja",
+  "name": "osm3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "fikriyanidp",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.7.2",
+    "bluebird": "^3.7.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "pg-promise": "^10.8.1"
+    "pg": "^7.14.0",
+    "pg-promise": "^10.2.1"
   }
 }
